hard-gists/6027183/run.log
=== Docker Run Log for 6027183 ===
Started at: Mi 29. Okt 16:18:13 CET 2025

[2025-10-29 16:18:13] START: Running container for 6027183
[2025-10-29 16:18:13] SUCCESS: Container 267bc1cb9cec922b61ac3b1a6dcf10d416137a1b6ee672aac9c314ebbd77a98f started for 6027183
=== Container logs for 6027183 ===
  File "/snippet.py", line 18
    print 'Bad instrument list', instruments
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 6027183 ===
[2025-10-29 16:18:15] INFO: Container 267bc1cb9cec922b61ac3b1a6dcf10d416137a1b6ee672aac9c314ebbd77a98f has stopped
